--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 project(building-your-own-lisp)
-set(CMAKE_C_FLAGS "-Werror -Wall")
+set(CMAKE_C_FLAGS "-Werror -Wall -g")
 include_directories("src/" "mpc/" "/usr/local/include")
 
 add_executable(main src/parsing.c mpc/mpc.c)
