--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
 cmake_minimum_required(VERSION 3.10)
 project(building-your-own-lisp)
+
+if (APPLE)
+  set(CMAKE_OSX_SYSROOT /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk)
+endif()
+  
 set(CMAKE_C_FLAGS "-Werror -Wall -g")
 include_directories("src/" "mpc/" "/usr/local/include")
 
